Database features and custom exceptions